assets/css/bootstrap.css
/* ... */
@media screen and (max-width: 451px) {
    .header-inner p {
        font-size: 13pt;
    }
}

@media screen and (min-width: 1200px) {
    div.header-bottom {
        margin-top: 40px;
    }
}

@media screen and (max-width: 767px) and (min-width: 360px) {
    header {
        padding-top: 70px;
    }
}

@media screen and (max-width: 360px) {
    nav.navbar-default {
        background-color: black;
    }
}

@media screen and (max-width: 767px) {
    nav.navbar-default {
        padding-left: 30px;
        padding-right: 25px;
    }
}

.navbar-toggle {
    background-color: #1a5386;
    border: none;
}

.navbar-toggle span {
    color: white;
}

.navbar-collapse {
/*    background-color: black;*/
}

.navbar-box-shadow {
    box-shadow: 0px 10px 5px black;
}

ul.navbar-right {
    padding-right: 11px;
}

.parallax { 
    /* The image used */
    background-image: url("../images/subscribe-bg.jpg");

    /* Set a specific height */
    height: 100px; 

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.parallax-1 {
    height: 160px;
    background-image: url("../images/AdobeStock_88840403.png")
}

.parallax-2 {
    height: 300px;
    background-image: url("../images/AdobeStock_88840403.png")
}

.team-member-section {
    padding-top: 30px;
    padding-bottom: 20px;
}

#our-amazing-team-title {
    height: 150px;
    padding-top: 30px
    
}

.title-area .title span.white-text {
    color: white;
}

.our-amazing-team-container {
    padding-top: 40px;
}

@media screen and (max-width: 767px) {
    .team-member-row .col-sm-2 {
        padding-left: 30px;
        padding-right: 30px;
    }
}

.team-member h4,
.team-member p {
    color: white;
}
.team-member .fa {
    color: goldenrod;
}

